--- a/ds/apps/estar-protegidos/package.json
+++ b/ds/apps/estar-protegidos/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@storybook/react": "^10.1.10",
+    "@storybook/react": "8.6.15",
+    "@storybook/nextjs": "8.6.15",
     "@types/react": "19.2.7",
-    "storybook": "^10.1.10"
+    "storybook": "8.6.15"
   }
 }
