--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -1,11 +1,50 @@
 {
-  "name": "@myco/ui",
+  "name": "@loopdev/ui",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "license": "MIT",
   "scripts": {
-    "dev": "echo 'No dev server'",
+    "build": "tsc --project tsconfig.json",
+    "dev": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "lint": "eslint . || echo 'No lint config'",
     "typecheck": "tsc --noEmit || echo 'No tsconfig'"
+  },
+  "devDependencies": {
+    "@myco/tailwind-config": "workspace:*",
+    "@myco/tokens": "workspace:*",
+    "@storybook/addon-essentials": "8.6.15",
+    "@storybook/addon-interactions": "8.6.15",
+    "@storybook/addon-links": "8.6.15",
+    "@storybook/addon-onboarding": "8.6.15",
+    "@storybook/blocks": "8.6.15",
+    "@storybook/react": "8.6.15",
+    "@storybook/react-vite": "8.6.15",
+    "@storybook/test": "8.6.15",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "storybook": "8.6.15",
+    "tailwindcss": "3.4.17",
+    "vite": "^5.4.0"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.4.0"
   }
 }
