--- a/ds/apps/docs/package.json
+++ b/ds/apps/docs/package.json
@@ -14,13 +14,17 @@
     "@loopdev/ui": "workspace:*"
   },
   "devDependencies": {
+    "@myco/tailwind-config": "workspace:*",
+    "@storybook/addon-a11y": "8.6.15",
+    "@storybook/addon-docs": "8.6.15",
     "@storybook/addon-essentials": "8.6.15",
+    "@storybook/addon-onboarding": "8.6.15",
     "@storybook/react": "8.6.15",
     "@storybook/react-vite": "8.6.15",
     "@storybook/testing-library": "0.2.2",
-    "@storybook/addon-a11y": "8.6.15",
-    "@storybook/addon-docs": "8.6.15",
-    "@storybook/addon-onboarding": "8.6.15",
-    "storybook": "8.6.15"
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "storybook": "8.6.15",
+    "tailwindcss": "3.4.17"
   }
 }
