--- a/ds/apps/docs/package.json
+++ b/ds/apps/docs/package.json
@@ -19,6 +19,7 @@
     "@storybook/addon-docs": "8.6.15",
     "@storybook/addon-essentials": "8.6.15",
     "@storybook/addon-onboarding": "8.6.15",
+    "@storybook/addon-themes": "^10.1.10",
     "@storybook/react": "8.6.15",
     "@storybook/react-vite": "8.6.15",
     "@storybook/testing-library": "0.2.2",
