feat: implement hierarchical brand filtering and migration master plan

--- a/ds/apps/docs/package.json
+++ b/ds/apps/docs/package.json
@@ -11,7 +11,9 @@
     "typecheck": "tsc --noEmit || echo 'No tsconfig'"
   },
   "dependencies": {
-    "@loopdev/ui": "workspace:*"
+    "@loopdev/ui": "workspace:*",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@myco/tailwind-config": "workspace:*",
