feat: centralize styles, add button metadata and migration audit log

--- a/ds/apps/docs/tsconfig.json
+++ b/ds/apps/docs/tsconfig.json
@@ -9,7 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@loopdev/ui": ["../../packages/ui/src"]
+      "@loopdev/ui": ["../../packages/ui/src"],
+      "@loopdev/ui/*": ["../../packages/ui/src/*"]
     }
   },
   "include": ["src", "stories", ".storybook"]
