feat(ds): implement layout foundations, multi-tenancy core and app shell architecture
- Add TenantProvider with strategic brand DNA support
- Implement Layout Foundations: Stack, Inline, Grid, Box, Bleed, AspectRatio, SafeArea
- Refactor AppShell with Level 1 (TopBar) and Level 2 (PageHeader) hierarchy
- Update Storybook with dual-level header and tenant context decorators
- Expand design tokens for sub-brands and safe areas

--- a/ds/packages/tailwind-config/package.json
+++ b/ds/packages/tailwind-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@myco/tailwind-config",
+  "name": "@loopdev/tailwind-config",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
