--- a/ds/apps/docs/package.json
+++ b/ds/apps/docs/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@myco/tailwind-config": "workspace:*",
+    "@loopdev/tailwind-config": "workspace:*",
     "@storybook/addon-a11y": "8.6.15",
     "@storybook/addon-docs": "8.6.15",
     "@storybook/addon-essentials": "8.6.15",
