--- a/ds/packages/eslint-config/package.json
+++ b/ds/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@myco/eslint-config",
+  "name": "@loopdev/eslint-config",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
