--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -19,8 +19,8 @@
     "typecheck": "tsc --noEmit || echo 'No tsconfig'"
   },
   "devDependencies": {
-    "@myco/tailwind-config": "workspace:*",
-    "@myco/tokens": "workspace:*",
+    "@loopdev/tailwind-config": "workspace:*",
+    "@loopdev/tokens": "workspace:*",
     "@storybook/addon-essentials": "8.6.15",
     "@storybook/addon-interactions": "8.6.15",
     "@storybook/addon-links": "8.6.15",
@@ -35,7 +35,8 @@
     "postcss": "8.4.49",
     "storybook": "8.6.15",
     "tailwindcss": "3.4.17",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-tsconfig-paths": "^6.0.3"
   },
   "peerDependencies": {
     "react": "^19.0.0",
