--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@loopdev/ui",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.js"
-    }
+      "types": "./src/index.ts",
+      "import": "./src/index.ts"
+    },
+    "./styles/*": "./src/styles/*"
   },
   "license": "MIT",
   "scripts": {
