chore(arch): establish industrial governance with v1.2 workflow, testing protocol and dynamic theming

--- a/ds/packages/ui/tsconfig.json
+++ b/ds/packages/ui/tsconfig.json
@@ -7,8 +7,7 @@
       "@loopdev/tokens": ["../tokens"],
       "@loopdev/tokens/*": ["../tokens/src/*"]
     },
-    "outDir": "./dist",
-    "rootDir": "src"
+    "outDir": "./dist"
   },
-  "include": ["src"]
+  "include": ["src", "vitest.shims.d.ts", "vitest.setup.ts"]
 }
