--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -29,14 +29,19 @@
     "@storybook/react": "8.6.15",
     "@storybook/react-vite": "8.6.15",
     "@storybook/test": "8.6.15",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "autoprefixer": "10.4.20",
+    "jsdom": "^27.4.0",
     "postcss": "8.4.49",
     "storybook": "8.6.15",
     "tailwindcss": "3.4.17",
     "vite": "^5.4.0",
-    "vite-tsconfig-paths": "^6.0.3"
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.16"
   },
   "peerDependencies": {
     "react": "^19.0.0",
