--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react": "^16.3.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "10.4.20",
     "jsdom": "^27.4.0",
     "postcss": "8.4.49",
