--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@changesets/cli": "^2.29.8",
     "@types/node": "^25.0.3",
     "rimraf": "^6.0.0",
+    "snyk": "^1.1301.2",
     "turbo": "^2.0.0",
     "typescript": "^5.5.0"
   }
