docs(governance): define Layout System and update certification lifecycle

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,3 +11,4 @@ packages:
   
   # Applications Layer (Products)
   - 'apps/*'
+  - 'mockv2' # Agregado para que Turbo/PNPM reconozcan el lab de mockv2
