feat: standardize Launchpad and promote DS components v3.8
- Redesigned Launchpad with industrial luxury standard.
- Promoted BrandLogo, EngineeringSeal, SystemStatus, ThemeToggle, BlueprintBackground, and TechnicalSurface to @loopdev/ui.
- Created SuiteCard composite component.
- Implemented AuthProvider and brandsApi service with Supabase integration.
- Updated Tailwind and Next.js configs for monorepo transpilation.
- Cleaned up header and sidebar branding across the platform.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "paths": {
       "@loopdev/ui": ["ds/packages/ui/src/index.ts"],
       "@loopdev/ui/*": ["ds/packages/ui/src/*"],
+      "@loopdev/tailwind-config": ["ds/packages/tailwind-config/index.js"],
       "@loopdev/mod-architect": ["modules/mod-architect/src/index.ts"],
       "@loopdev/mod-architect/*": ["modules/mod-architect/src/*"]
     }
