feat(ds): complete industrial refactor of SuiteSidebar and atoms
This commit finalizes the full standardization of the LoopDev OS sidebar system, promoting all visual and logical pieces to certified Design System components.

### Key Achievements:
- **SuiteSidebar as Context Controller:** The sidebar is now a high-level composite that orchestrates navigation based on a universal NavigationSchema.
- **New Certified Atoms:**
  - : Interactive module entry with governance states.
  - : Standardized user identity display.
  - : Official telemetry and liveness indicator.
  - : Technical brand accent marker.
  - : Minimalist return navigation button.
  - : Precision typography for metadata.
  - : Enterprise-grade, accessible tooltips.
  - : Structural atom for navigation sections.
  - : Standardized technical scrollbar utility.
- **New Certified Composites:**
  - : Unified system control console.
  - : Standardized suite branding header.
- **Architectural Documentation:**
  - Created  to govern all future suite implementations.
  - Updated  with cross-references.
- **Zero Hardcoding:** All components now rely exclusively on LoopDev design tokens and CSS variables, ensuring multitenant compatibility and theme reactivity.

--- a/ds/packages/tailwind-config/package.json
+++ b/ds/packages/tailwind-config/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
+    "tailwind-scrollbar-hide": "^2.0.0"
+  },
   "scripts": {
     "dev": "echo 'No dev server'",
     "lint": "eslint . || echo 'No lint config'",
