--- a/ds/packages/ui/package.json
+++ b/ds/packages/ui/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --project tsconfig.json",
+    "test": "vitest run",
     "dev": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "eslint . || echo 'No lint config'",
